...

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="John"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvErrorFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="Doe"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvErrorLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPhonePrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorPhonePrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPostCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="Graz"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
...

                <TextView
                    android:id="@+id/tvErrorPostCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvErrorCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
